--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                                  
                                  <!-- 前回入力を残す（チェック時はフォーム復帰で復元） -->
                                  <div class="mt-4 flex items-center justify-center gap-2 text-slate-600">
-                                     <input type="checkbox" id="keep-input" class="h-4 w-4" checked>
+                                     <input type="checkbox" id="keep-input" class="h-4 w-4">
                                      <label for="keep-input" class="text-sm cursor-pointer">前回の入力を残す</label>
                                  </div>
                             </div>
